--- a/mean-course/src/app/app.component.html
+++ b/mean-course/src/app/app.component.html
@@ -1,10 +1,5 @@
- <!-- <div>
-    <h1>My First Angular App</h1>
-  </div>
-Note: this is commented out
--->
 <app-header></app-header>
 <main>
-  <app-post-create (postCreated)= "onPostAdded($event)" ></app-post-create>
-  <app-post-list [posts] = "storedPosts"></app-post-list>
+    <app-post-create></app-post-create>
+    <app-post-list></app-post-list>
 </main>
