--- a/mean-course/src/app/header/header/header.component.html
+++ b/mean-course/src/app/header/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
     <span><a routerLink="">My Messages</a></span>
     <span class="spacer"></span>
     <ul>
