--- a/mean-course/src/app/posts/post-create/post-create.component.html
+++ b/mean-course/src/app/posts/post-create/post-create.component.html
@@ -21,19 +21,27 @@
 <br>
 -->
 <!--<p>{{ newPost }}</p>  ** This is removed step 2.7.3-->
+<mat-spinner *ngIf="isLoading"></mat-spinner>
 <mat-card>
-    <mat-spinner *ngIf="isLoading"></mat-spinner>
-    <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
+    <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
         <mat-form-field>
-            <input placeholder="Post Title" matInput type="text" minlength="3" required name="title"
-                [ngModel]="post?.title" #title="ngModel" [focus]="focusSetting">
-            <mat-error *ngIf="title.invalid">Please enter a Post Title</mat-error>
+            <input matInput type="text" formControlName="title" placeholder="Post Title" [focus]="focusSetting">
+            <mat-error *ngIf="form.get('title').invalid">Please enter a post title.</mat-error>
         </mat-form-field>
+
+        <div>
+            <!-- <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button> -->
+            <input type="file" #filePicker (change)="onImagePicked($event)">
+        </div>
+
+        <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+            <img [src]="imagePreview" [alt]="form.value.title">
+        </div>
+
         <mat-form-field>
-            <textarea placeholder="Post Content" matInput rows="4" required name="content" [ngModel]="post?.content"
-                #content="ngModel"></textarea>
-            <mat-error *ngIf="content.invalid">Please enter a post Content</mat-error>
+            <textarea matInput rows="4" formControlName="content" placeholder="Post Content"></textarea>
+            <mat-error *ngIf="form.get('content').invalid">Please enter a post title.</mat-error>
         </mat-form-field>
-        <button mat-raised-button color="primary" type="submit">Save Post</button>
+        <button mat-raised-button color="accent" type="submit">Save Post</button>
     </form>
 </mat-card>
