--- a/mean-course/src/app/posts/post-create/post-create.component.html
+++ b/mean-course/src/app/posts/post-create/post-create.component.html
@@ -30,8 +30,8 @@
         </mat-form-field>
 
         <div>
-            <!-- <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button> -->
-            <input type="file" #filePicker (change)="onImagePicked($event)">
+            <button mat-raised-button type="button" (click)="filePicker.click()">Pick Image</button>
+            <input type="file" #filePicker (change)="onImagePicked($event)" hidden>
         </div>
 
         <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
