--- a/mean-course/src/app/posts/post-list/post-list.component.html
+++ b/mean-course/src/app/posts/post-list/post-list.component.html
@@ -1,7 +1,7 @@
-<mat-spinner *ngIf="isLoading" color="warn"></mat-spinner>
+<mat-spinner *ngIf="isLoading"></mat-spinner>
 <mat-accordion #accordion="matAccordion" multi="true" *ngIf="posts.length > 0 && !isLoading">
-    <button mat-raised-button color="accent" (click)="accordion.openAll()">Expand All </button>
-    <button mat-raised-button color="accent" (click)="accordion.closeAll()">Collapse All </button>
+    <button mat-raised-button color="prirmary" (click)="accordion.openAll()">Expand All </button>
+    <button mat-raised-button color="prirmary" (click)="accordion.closeAll()">Collapse All </button>
     <mat-expansion-panel *ngFor="let post of posts">
         <mat-expansion-panel-header>
             {{post.title}}
@@ -15,6 +15,6 @@
             <button mat-raised-button color="warn" (click)="onDelete(post.id)">DELETE</button>
         </mat-action-row>
     </mat-expansion-panel>
-    <button mat-raised-button color="accent" (click)="onDeleteAll();">Delete All Post</button>
+    <button mat-raised-button color="warn" (click)="onDeleteAll();">Delete All Post</button>
 </mat-accordion>
 <p class="info-text mat-body-1" *ngIf="posts.length <= 0 && !isLoading"> No Posts added yet !!</p>
