--- a/mean-course/src/app/posts/post-create/post-create.component.css
+++ b/mean-course/src/app/posts/post-create/post-create.component.css
@@ -12,6 +12,9 @@ mat-spinner {
     margin: auto;
     }
 
+input[type="file"] {
+      Visibility: hidden;
+}    
 
 .image-preview {
       height: 5rem;
