--- a/mean-course/src/app/posts/post-create/post-create.component.html
+++ b/mean-course/src/app/posts/post-create/post-create.component.html
@@ -30,8 +30,8 @@
         </mat-form-field>
 
         <div>
-            <button mat-raised-button type="button" (click)="filePicker.click()">Pick Image</button>
-            <input type="file" #filePicker (change)="onImagePicked($event)" hidden>
+            <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+            <input type="file" #filePicker (change)="onImagePicked($event)">
         </div>
 
         <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
@@ -42,6 +42,6 @@
             <textarea matInput rows="4" formControlName="content" placeholder="Post Content"></textarea>
             <mat-error *ngIf="form.get('content').invalid">Please enter a post title.</mat-error>
         </mat-form-field>
-        <button mat-raised-button color="accent" type="submit">Save Post</button>
+        <button mat-raised-button color="primary" type="submit">Save Post</button>
     </form>
 </mat-card>
