--- a/mean-course/src/app/posts/post-list/post-list.component.html
+++ b/mean-course/src/app/posts/post-list/post-list.component.html
@@ -10,12 +10,12 @@
             <img [src]="post.imagePath" [alt]="post.title">
         </div>
         <p> {{post.content}}</p>
-        <mat-action-row>
-            <a mat-button mat-raised-button color="parimary" [routerLink]="['/edit/', post.id]">EDIT</a>
-            <button mat-raised-button color="warn" (click)="onDelete(post.id)">DELETE</button>
+        <mat-action-row *ngIf="userIsAuthenticated">
+            <a mat-button color="primary" [routerLink]="['/edit/', post.id]">EDIT</a>
+            <button mat-button color="warn" (click)="onDelete(post.id)">DELETE</button>
         </mat-action-row>
     </mat-expansion-panel>
-    <button mat-raised-button color="warn" (click)="onDeleteAll();">Delete All Post</button>
+    <button mat-raised-button *ngIf="userIsAuthenticated" color="warn" (click)="onDeleteAll();">Delete All Post</button>
 </mat-accordion>
 <mat-paginator [length]="totalPosts" [pageSize]="postsPerPage" [pageSizeOptions]="pageSizeOptions"
     (page)="onChangedPage($event)" *ngIf="posts.length > 0"></mat-paginator>
