--- a/mean-course/src/app/header/header/header.component.html
+++ b/mean-course/src/app/header/header/header.component.html
@@ -7,11 +7,11 @@
         </li>
 
         <li *ngIf="!userIsAuthenticated">
-            <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
+            <a mat-button routerLink="/auth/login" routerLinkActive="mat-accent">Login</a>
         </li>
 
         <li *ngIf="!userIsAuthenticated">
-            <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Sign Up</a>
+            <a mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">Sign Up</a>
         </li>
 
         <li *ngIf="userIsAuthenticated">
