--- a/mean-course/src/app/posts/post-create/post-create.component.html
+++ b/mean-course/src/app/posts/post-create/post-create.component.html
@@ -25,7 +25,7 @@
 <mat-card>
     <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
         <mat-form-field>
-            <input matInput type="text" formControlName="title" placeholder="Post Title" [focus]="focusSetting">
+            <input matInput type="text" formControlName="title" placeholder="Post Title">
             <mat-error *ngIf="form.get('title').invalid">Please enter a post title.</mat-error>
         </mat-form-field>
 
