--- a/mean-course/src/app/auth/login/login.component.html
+++ b/mean-course/src/app/auth/login/login.component.html
@@ -2,8 +2,8 @@
 <mat-card>
     <form (submit)="onLogin(loginForm)" #loginForm="ngForm" *ngIf="!isLoading">
         <mat-form-field>
-            <input matInput type="text" ngModel name="email" placeholder="Enter the User ID" #emailInput="ngModel"
-                required [focus]="focusLogin">
+            <input matInput type="email" ngModel name="email" placeholder="Enter the User ID" #emailInput="ngModel"
+                required [focus]="focusLogin" email="true">
             <mat-error *ngIf="emailInput.invalid">Enter a valid email</mat-error>
         </mat-form-field>
         <mat-form-field>
